[APPS] Updated mcan_mcan_fd_operation_blocking_sam_rh71_ek demo
MH3-55371

--- a/apps/mcan/mcan_fd_operation_blocking/firmware/src/config/sam_rh71_ek/sam_rh71_ek.mhc/flexcom1.yml
+++ b/apps/mcan/mcan_fd_operation_blocking/firmware/src/config/sam_rh71_ek/sam_rh71_ek.mhc/flexcom1.yml
@@ -376,6 +376,13 @@ children:
       children:
       - type: Dynamic
         attributes: {id: flexcom1, value: 'true'}
+  - type: String
+    attributes: {id: USART_DATA_BITS}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: flexcom1, value: DRV_USART_DATA_8_BIT}
   - type: Boolean
     attributes: {id: USART_INTERRUPT_MODE}
     children:
