[HEMC] Regenerated demo for hemc_hsdramc_hsdramc_read_write_sam_rh71_ek
MH3-59088

Signed-off-by: Jignesh Moradiya <jignesh.moradiya@microchip.com>

--- a/apps/hemc/hsdramc/hsdramc_read_write/firmware/src/config/sam_rh71_ek/sam_rh71_ek.mhc/hemc.yml
+++ b/apps/hemc/hsdramc/hsdramc_read_write/firmware/src/config/sam_rh71_ek/sam_rh71_ek.mhc/hemc.yml
@@ -49,7 +49,7 @@ children:
       - type: String
         attributes: {id: text}
         children:
-        - {type: Value, value: '**** HEMC is running at 100000000Hz ****'}
+        - {type: Value, value: '**** HEMC is running at 100000000 Hz ****'}
   - type: KeyValueSet
     attributes: {id: HSDRAMC_CR__NB}
     children:
