--- a/apps/pio/pio_led_on_off_interrupt/firmware/src/config/sam_rh71_ek/harmony-manifest-success.yml
+++ b/apps/pio/pio_led_on_off_interrupt/firmware/src/config/sam_rh71_ek/harmony-manifest-success.yml
@@ -4,19 +4,19 @@
 
 
 project: pio_led_on_off_interrupt
-creation_date: 2024-09-02T12:06:32.167+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+creation_date: 2024-10-23T12:16:34.652+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
 operating_system: Windows 10
-mcc_mode: IDE            # [IDE|Standalone|Headless]
+mcc_mode: Headless            # [IDE|Standalone|Headless]
 mcc_version: v5.5.1
 mcc_core_version: v5.7.1
-mplabx_version: v6.20        # if MPLAB X plugin only
-harmony_version: v1.5.2
-compiler: XC32 4.21
+mplabx_version: NA        # if MPLAB X plugin only
+harmony_version: v1.5.3
+compiler: NA
 
 modules:
-    - {name: "csp", version: "csp_v3_20_0_jira_fixes"}
-    - {name: "CMSIS_5", version: "5.8.0"}
+    - {name: "csp", version: "v3.20.0-rc.1-13-g1e373d5"}
+    - {name: "CMSIS_5", version: "5.9.0"}
 
 packs:
-    - {name: "SAMRH71_DFP", version: "2.5.142"}
+    - {name: "SAMRH71_DFP", version: "2.6.253"}
 
